# todo-using-files-in-c

./: .gitignore  CMakeLists.txt  README.md  app.c  app.h  apputils.c  apputils.h  config.h  error.list  fileutils.c  fileutils.h  main.c  strutils.c  strutils.h  todo.c  todo.h
include/: todo.h
src/: apputils.c  todo.c
